@@ -10,5 +10,10 @@ dnl Disable by either passing --disable-silent-rules to configure
 dnl or passing V=1 to make
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
+# We need cmunge running on build machine:
+AC_PATH_PROG([CMUNGE], [cmunge])
+AS_IF([test "x${CMUNGE}" == "x"],
+    [AC_MSG_ERROR([C Module Header Generator "cmunge" not found.])])
+
 AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
